# standby

./: Cargo.toml  README.md  setup-homebrew-tap.sh
.github/workflows/: ci.yml  release-core.yml  release-windows.yml  release.yml
src/: app.rs  audio.rs  config.rs  constants.rs  error.rs  main.rs  smoothing.rs  state.rs  ui.rs
