[package]
name = "soundcheck"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/isfopo/soundcheck"
license = "MIT"
description = "A terminal-based audio monitoring application that displays real-time audio levels and exits when sound exceeds a specified threshold."

[dependencies]
clap = { version = "4.0", features = ["derive"] }
cpal = "0.15"
tokio = { version = "1.38", features = ["full", "signal"] }
ratatui = "0.26"
crossterm = "0.27"
dialoguer = "0.11"
